--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root{
-  --bg-secColor:#eff4fd;
+  --bg-secColor:#fcfafa;
   --bg-mainColor:#101213;
   --main-font:'Josefin Sans', sans-serif;
   --font-color:#ffffff;
-
+  --font-secColor:#101213;
 }
 
 *{
@@ -22,4 +22,5 @@ body{
   background-color: var(--bg-mainColor);
   font-family: var(--main-font);
   color: var(--font-color);
+  overflow-x: hidden !important;
 }
